# genesis-project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  genesis-plan.md  journal.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  app.py
backend/app/pipeline/: answer.py  base.py  explore.py  orchestrator.py  plan.py
backend/app/routers/: auth.py  conversations.py  pipeline_runs.py
backend/app/schemas/: api.py
backend/app/services/: events.py  llm.py
backend/app/tools/: __init__.py  base.py  list_tables.py  query.py  sample_data.py  show_schema.py  sql_safety.py
backend/tests/: conftest.py  test_answer.py  test_auth.py  test_conversations.py  test_llm.py  test_pipeline_answer.py  test_pipeline_e2e.py  test_pipeline_explore.py  test_pipeline_plan.py  test_pipeline_runs.py  test_sse.py  test_tools.py
db/: seed_target.sql  setup_app_role.sql  setup_app_tables.sql
db/migrations/: 001_add_pipeline_data.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AssistantMessage.tsx  ChatLayout.tsx  ChatPane.tsx  LoginPage.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx  ThinkingCollapsible.tsx
frontend/src/hooks/: useConversations.ts  useSSE.ts
frontend/src/types/: index.ts
